# solana-toolbox

./: .gitignore  README.md  Taskfile.yml  rustfmt.toml
solana_toolbox_anchor/: Cargo-solana-1.18.26-anchor-0.30.1.toml  Cargo-solana-2.1.4-anchor-0.30.1.toml  Cargo.toml
solana_toolbox_anchor/src/: lib.rs  toolbox_anchor.rs  toolbox_anchor_account.rs  toolbox_anchor_endpoint.rs  toolbox_anchor_error.rs  toolbox_anchor_idl.rs  toolbox_anchor_idl_account.rs  toolbox_anchor_idl_discriminator.rs  toolbox_anchor_idl_instruction.rs  toolbox_anchor_idl_type.rs  toolbox_anchor_idl_utils.rs  toolbox_anchor_instruction.rs
solana_toolbox_anchor/tests/: mod.rs
solana_toolbox_anchor/tests/suites/: devnet_idl_anchor_0_29.rs  devnet_idl_anchor_0_30.rs  devnet_sysvars.rs  mainnet_beta_idl_anchor_0_29.rs  mod.rs  program_test_airdrop_transfer_get.rs  program_test_builtin_program.rs  program_test_logger_print.rs
solana_toolbox_cli/: Cargo-solana-2.1.4.toml  Cargo.toml
solana_toolbox_cli/src/: main.rs  toolbox_cli.rs  toolbox_cli_account.rs  toolbox_cli_account_inspect.rs  toolbox_cli_account_state.rs  toolbox_cli_command_account.rs  toolbox_cli_command_addresses.rs  toolbox_cli_command_dev_account.rs  toolbox_cli_command_dev_inspect_account.rs  toolbox_cli_command_execution.rs  toolbox_cli_command_find.rs  toolbox_cli_command_get_account.rs  toolbox_cli_command_get_account_json.rs  toolbox_cli_command_get_execution.rs  toolbox_cli_command_get_execution_json.rs  toolbox_cli_command_history.rs  toolbox_cli_command_idl_account.rs  toolbox_cli_command_idl_decompile_account.rs  toolbox_cli_command_idl_decompile_execution.rs  toolbox_cli_command_idl_decompiled_account_json.rs  toolbox_cli_command_idl_decompiled_execution_json.rs  toolbox_cli_command_idl_describe.rs  toolbox_cli_command_idl_execution.rs  toolbox_cli_command_idl_instruction.rs  toolbox_cli_command_idl_instruction_execute.rs  toolbox_cli_command_idl_process.rs  toolbox_cli_command_idl_process_instruction.rs  toolbox_cli_command_idl_program.rs  toolbox_cli_command_idl_resolve_account.rs  toolbox_cli_command_idl_resolve_execution.rs  toolbox_cli_command_idl_resolve_instruction.rs  toolbox_cli_command_idl_resolve_instruction_accounts.rs  toolbox_cli_command_idl_resolve_instruction_addresses.rs  toolbox_cli_command_idl_resolve_instruction_base58.rs  toolbox_cli_command_idl_resolve_program.rs  toolbox_cli_command_inspect_account.rs  toolbox_cli_command_instruction.rs  toolbox_cli_command_pda.rs  toolbox_cli_command_program.rs  toolbox_cli_command_raw_get_account.rs  (+18 more)
solana_toolbox_endpoint/: Cargo-solana-1.18.26.toml  Cargo-solana-2.1.4.toml  Cargo.toml  README.md
solana_toolbox_endpoint/src/: endpoint.rs  endpoint_error.rs  endpoint_inner.rs  endpoint_inner_program_test_context.rs  endpoint_inner_rpc_client.rs  endpoint_util_account.rs  endpoint_util_factory.rs  endpoint_util_instruction.rs  endpoint_util_spl_token.rs  endpoint_util_system.rs  lib.rs  toolbox_endpoint.rs  toolbox_endpoint_data_execution.rs  toolbox_endpoint_data_transaction.rs  toolbox_endpoint_error.rs  toolbox_endpoint_execution.rs  toolbox_endpoint_factory_common.rs  toolbox_endpoint_factory_program_test.rs  toolbox_endpoint_factory_rpc_client.rs  toolbox_endpoint_inner.rs  toolbox_endpoint_inner_program_test_context.rs  toolbox_endpoint_inner_rpc_client.rs  toolbox_endpoint_logger.rs  toolbox_endpoint_logger_buffer.rs  toolbox_endpoint_logger_history.rs  toolbox_endpoint_logger_print.rs  toolbox_endpoint_logger_printer.rs  toolbox_endpoint_new_program_test.rs  toolbox_endpoint_new_rpc_client.rs  toolbox_endpoint_printer.rs  toolbox_endpoint_program.rs  toolbox_endpoint_proxy.rs  toolbox_endpoint_proxy_program_test_context.rs  toolbox_endpoint_proxy_rpc_client.rs  toolbox_endpoint_proxy_rpc_client_get_execution.rs  toolbox_endpoint_proxy_rpc_client_get_transaction.rs  toolbox_endpoint_proxy_rpc_client_search_addresses.rs  toolbox_endpoint_proxy_rpc_client_search_signatures.rs  toolbox_endpoint_proxy_rpc_client_simulate_transaction.rs  toolbox_endpoint_proxy_rpc_client_utils.rs  (+26 more)
solana_toolbox_endpoint/tests/fixtures/: spl_token_metadata_metaplex.json  spl_token_metaplex_metadata.json
solana_toolbox_endpoint/tests/suites/: devnet_address_lookup_table.rs  devnet_get_execution.rs  devnet_get_slot_unix_timestamp.rs  devnet_history.rs  devnet_preflight.rs  devnet_program.rs  devnet_search_addresses.rs  devnet_search_signatures.rs  devnet_signature_verify.rs  devnet_simulate.rs  devnet_spl_token_metadata.rs  devnet_sysvars.rs  mainnet_spl_token_metadata.rs  mod.rs  program_test_address_lookup_table.rs  program_test_builtin_programs.rs  program_test_compute_budget.rs  program_test_forward_clock.rs  program_test_loggers.rs  (+12 more)
solana_toolbox_idl/: Cargo-solana-1.18.26.toml  Cargo-solana-2.1.4.toml  Cargo.toml  README.md
solana_toolbox_idl/src/: lib.rs  toolbox_idl.rs  toolbox_idl_account.rs  toolbox_idl_account_export.rs  toolbox_idl_account_json.rs  toolbox_idl_account_parse.rs  toolbox_idl_breadcrumbs.rs  toolbox_idl_cache.rs  toolbox_idl_context.rs  toolbox_idl_discriminator.rs  toolbox_idl_error.rs  toolbox_idl_error_export.rs  toolbox_idl_error_parse.rs  toolbox_idl_event.rs  toolbox_idl_event_parse.rs  toolbox_idl_format.rs  toolbox_idl_format_anchor_26.rs  toolbox_idl_format_anchor_30.rs  toolbox_idl_format_human.rs  toolbox_idl_info_docs.rs  toolbox_idl_info_format.rs  toolbox_idl_instruction.rs  toolbox_idl_instruction_account.rs  toolbox_idl_instruction_account_compute.rs  toolbox_idl_instruction_account_export.rs  toolbox_idl_instruction_account_json.rs  toolbox_idl_instruction_account_parse.rs  toolbox_idl_instruction_accounts.rs  toolbox_idl_instruction_accounts_addresses.rs  toolbox_idl_instruction_addresses.rs  toolbox_idl_instruction_args.rs  toolbox_idl_instruction_data.rs  toolbox_idl_instruction_explained.rs  toolbox_idl_instruction_export.rs  toolbox_idl_instruction_json.rs  toolbox_idl_instruction_needs.rs  toolbox_idl_instruction_parse.rs  toolbox_idl_instruction_payload.rs  toolbox_idl_instruction_specs.rs  toolbox_idl_lib_native_compute_budget.rs  (+107 more)
(+303 files in other folders)
