[package]
name = "solana_toolbox_anchor"
description = "Toolbox for interacting with an anchor programs using an endpoint"
version = "0.1.21-solana-1.18.26-anchor-0.30.1"
edition = "2021"
license = "MIT"

[dependencies]
solana-sdk = "=1.18.26"

anchor-lang = "=0.30.1"
anchor-spl = "=0.30.1"

solana_toolbox_endpoint = "=0.1.21-solana-1.18.26"

[dev-dependencies]
tokio = "1.42.0"
