[package]
name = "solana_toolbox_anchor"
description = "Toolbox for interacting with an anchor programs using an endpoint"
version = "0.3.8-solana-1.18.26-anchor-0.30.1"
edition = "2021"
license = "MIT"

[dependencies]
anchor-lang = "=0.30.1"

solana-sdk = "=1.18.26"
solana_toolbox_endpoint = "=0.3.8-solana-1.18.26"

[dev-dependencies]
tokio = "1.42.0"
