[package]
name = "solana_toolbox_cli"
description = "Toolbox for interacting with programs through CLI"
version = "0.3.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
serde_json = "1.0.135"
solana-sdk = "=2.1.4"
solana-cli-config = "=2.1.4"
solana_toolbox_endpoint = "=0.3.0-solana-2.1.4"
solana_toolbox_idl = "=0.3.0-solana-2.1.4"
tokio = "1.42.0"
