[package]
name = "solana_toolbox_cli"
description = "Toolbox for interacting with programs through CLI"
version = "0.3.8"
edition = "2021"
license = "MIT"

[[bin]]
name = "solana-toolbox"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
base64 = "0.22.1"
serde_json = "1.0.135"
serde-hjson = "1.1.0"
urlencoding = "2.1.3"
solana-sdk = "=2.1.4"
solana-cli-config = "=2.1.4"
solana_toolbox_endpoint = "=0.3.8-solana-2.1.4"
solana_toolbox_idl = "=0.3.8-solana-2.1.4"
tokio = "1.42.0"
