[package]
name = "solana_toolbox_endpoint"
description = "Toolbox for interacting with an arbitrary solana endpoint"
version = "0.3.3-solana-1.18.26"
edition = "2021"
license = "MIT"

[features]
has_sort_results_field = []
default = []

[dependencies]
async-trait = "0.1.83"

bincode = "1.3.3"
borsh = "1.5.3"
bytemuck = "1.21.0"
base64 = "0.22.1"
serde = "1.0.216"
serde_json = "1.0.135"

solana-client = "=1.18.26"
solana-program-test = "=1.18.26"
solana-program-runtime = "=1.18.26"
solana-sdk = "=1.18.26"
solana-transaction-status = "=1.18.26"
solana-account-decoder = "=1.18.26"

spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0.0", features = [
    "no-entrypoint",
] }

[dev-dependencies]
tokio = "1.42.0"
