[package]
name = "solana_toolbox_endpoint"
description = "Toolbox for interacting with an arbitrary solana endpoint"
version = "0.4.2-solana-2.1.4"
edition = "2021"
license = "MIT"

[features]
has_sort_results_field = []
default = ["has_sort_results_field"]

[dependencies]
async-trait = "0.1.83"

bincode = "1.3.3"
borsh = "1.5.3"
bytemuck = "1.21.0"
base64 = "0.22.1"
serde = "1.0.216"
serde_json = "1.0.135"
urlencoding = "2.1.3"
anyhow = "1.0.97"

solana-client = "2.2.1"
solana-program-test = "2.2.1"
solana-program-runtime = "2.2.1"
solana-sdk = "2.2.1"
solana-transaction-status = "2.2.1"
solana-account-decoder = "2.2.1"

spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = [
    "no-entrypoint",
] }

[dev-dependencies]
tokio = "1.42.0"
