[package]
name = "solana_toolbox_idl"
description = "Toolbox for interacting with an programs using IDLs"
version = "0.1.30-solana-2.1.4"
edition = "2021"
license = "MIT"

[dependencies]
bytemuck = "1.21.0"
inflate = "0.4.5"
sha2 = "0.10.8"
serde_json = "1.0.135"

solana-sdk = "=2.1.4"
solana_toolbox_endpoint = "=0.1.30-solana-2.1.4"

[dev-dependencies]
tokio = "1.42.0"
