[package]
name = "solana_toolbox_idl"
description = "Toolbox for interacting with programs using only IDLs"
version = "0.3.6-solana-1.18.26"
edition = "2021"
license = "MIT"

[dependencies]
bytemuck = "1.21.0"
inflate = "0.4.5"
sha2 = "0.10.8"
serde_json = "1.0.135"
convert_case = "0.7.1"

solana-sdk = "=1.18.26"
solana_toolbox_endpoint = "=0.3.6-solana-1.18.26"

[dev-dependencies]
tokio = "1.42.0"
