[package]
name = "solana_toolbox_idl"
description = "Toolbox for interacting with programs using only IDLs"
version = "0.4.0-solana-2.1.4"
edition = "2021"
license = "MIT"

[dependencies]
inflate = "0.4.5"
serde_json = "1.0.135"
convert_case = "0.7.1"
anyhow = "1.0.97"

solana-sdk = "=2.1.4"
solana_toolbox_endpoint = { path = "../solana_toolbox_endpoint" }

[dev-dependencies]
tokio = "1.42.0"
bytemuck = { version = "1.21.0", features = ["min_const_generics"] }
